--- a/Report/references.bib
+++ b/Report/references.bib
@@ -103,11 +103,12 @@
 }
 
 @article{LanierWeylBlueprint,
- title={A blueprint for a better digital society},
- author={Lanier, Jaron and Weyl, E Glen},
+ title={A Blueprint for a Better Digital Society},
+ author={Lanier, Jaron and Weyl, E. Glen},
  journal={Harvard Business Review},
  volume={26},
- year={2018}
+ url = {http://eliassi.org/lanier_and_weyl_hbr2018.pdf},
+ date={2018-09-28}
 }
 
 @article{AppsChallengePlaybook,
@@ -296,4 +297,12 @@
  author = "Boston Government",
  url = {https://www.boston.gov/departments/innovation-and-technology/street-bump-mobile-application-terms-service},
  date = {2016-06-22}
+}
+
+@online{PrivacyApple,
+ shorthand = "LPS17",
+ title = "Learning with Privacy at Scale",
+ author = {Differential Privacy Team, Apple},
+ url = {https://docs-assets.developer.apple.com/ml-research/papers/learning-with-privacy-at-scale.pdf},
+ year = {2017}
 }
