Added some addition to consent

--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -172,6 +172,7 @@
 		\item Who obtained consent
 		\item What information was provided to the person consenting
 	\end{itemize}
+	The data subject should also be able to revoke its given consent at any time which should be as easy as to give consent. When the consent is rescinded the data must be deleted immediately and the further processing of it is prohibited but the former processed data can still be used.
 	\closesection
 
 	\section{Sanctions}
@@ -329,7 +330,7 @@
 		For services and application where realtime is also a relevant information to be processed for example the energy and water consumption in smart homes, for example in the Schoonschipp project in Amsterdam (subsection \ref{Schoonschipp}), whose smart grid system relies on that data, the General Data Protection Regulation can be a really hard governance, because the inhabitants are "transparent human beings" as the data from the homes is publicly known. Therefore the consent part of GDPR is significant such that the inhabitant are well informed and authorize the service provider to use that data, hence making GDPR somewhat redundant and unnecessary.
 	\closesection
 	
-	\noindent The idea of GDPR is to give users back the power over their own information and data and decide when it is used. Because of the consent paragraph in GDPR the therin mentioned rights can be overwritten or completely nullified. Another idea emerged in 2018 in the paper "A Blueprint for a Better Digital Society" by Jaron Lanier and E. Glen Weyl of "Data Dignity":
+	\noindent The idea of GDPR is to give users back the power over their own information and data and decide when it is used. Also because the use of data has become highly technical, obscure and unpredictable the concepts of consent which are the underlying base of the privacy rights are not meaningful as tracking the data in the world wide web and other services is very difficult. Another idea emerged in 2018 in the paper "A Blueprint for a Better Digital Society" by Jaron Lanier and E. Glen Weyl of "Data Dignity":
 	
 	\section[Data Dignity]{Data Dignity \cite{LanierWeylBlueprint}}
 	\startsection
