Finished Conclusion Chapter

--- a/Report/references.bib
+++ b/Report/references.bib
@@ -143,6 +143,12 @@
  doi={10.1109/JIOT.2017.2765699}
 }
 
+@article{GDPRandSurveillanceCameras,
+  author={Barnoviciu, Eduard and Ghenescu, Veta and Carata, Serban-Vasile and Ghenescu, Marian and Mihaescu, Roxana and Chindea, Mihai}, 
+  title={GDPR Compliance in Video Surveillance and Video Processing Application}, 
+  year={2019},
+  doi={10.1109/SPED.2019.8906553}}
+
 @book{BitbyBit, 
  address = {Princeton, NJ}, 
  edition = {Open Review Edition}, 
