--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -322,14 +322,34 @@
 
 	%\chapter{Considerations in Designing Crowd-Sourcing Methods}
 	\chapter{Conclusion}
-	In the following chapter design principles and guidelines are presented and the currently used crowd-sourcing methods are evaluated and possible improvements are introduced.
+	In the following chapter the currently used crowd-sourcing methods are evaluated and possible design principles and guidelines are introduced.
+	
+	\section{Today's Crowd-Sourcing Methods and GDPR} \label{juxtaposition}
+	\startsection
+		Generally today's crowd-sourcing methods are GDPR-conform and can still be carried out as before. \\
+		However there are some critical and tricky points that need to be considered when a government or service provider wants to use a certain crowd-sourcing method. \\
+		First of all, it must be ensured the "Right to Restriction" and the "Right to Object" must be respected as there must be an option to prevent the data processing of a certain individual. For example due to the high-quality cameras that are available for tracking purposes, such as traffic flow surveillance, public spaces which are not part of the actual video scanning can be intruded and people which are staying in these spaces can be recognized due to the progress in facial recognition algorithms. \\
+		Other tricky rights are the "Right to Access" and the "Right to Data Portability" such that apps which were not developed by the government but by individuals do not grant easy access to the data which were gathered and therefore are not in compliance with GDPR. Additionally such cases can be very difficult to enforce if the service provider's location is either outside of the European Union or can not be clearly identified. \\
+		For most of the crowd-sourcing methods the "Right to Erasure" can be neglected, because most of these are used to achieve a goal of "public interest" therefore nullifying the associated paragraph.
+	\closesection
 	
 	\section{Guidelines and Design Principles}
 	\startsection
+		The very first thing to mention is that GDPR is only considering personal data, hence anonymized data is out of scope regarding the regulations. Therefore, when using data in use-cases where it does not matter who this data belongs to, it should be anonymized in order to rule out possible conflicts with GDPR. \\
+		A very important point when developing crowd-sourcing methods is the handling of the consent. This must be given before gathering any data of the data subject, which also must be fully informed of what data is collected and for what purposes. It is not allowed to inline the consent giving i n the terms of condition but it must be a separate paragraph which can be individually approven or neglected. The choice must not have any negative consequences as loss of services for instance. If the consent consists of several parts, like the data that is collected, it should be made adjustable such that a full control of what is congregated is given to the user. If a user does revoke his/her given consent the data collection must stop immediately, the already gathered data must be deleted and the process of it is prohibited. However already processed data can still be used for information seeking. \\
+		In order to directly comply with the rights of a data subject stated in GDPR the following guidelines must be considered:
+		\begin{enumerate}[(a)]
+			\item All data that is gathered and processed must be accessible by the user and can be handed out when requested.
+			\item Restriction and Objection of data processing must be made possible.
+			\item If the crowd-sourcing method is not used to achieve a goal of public interest the data must be deleted on request and its processing must be prohibited.
+		\end{enumerate}
+		Following are some design principles and solutions for certain conflicts that were stated before: \\	
+		As mentioned in section \ref{juxtaposition} when using cameras in order to surveil certain places, for traffic flow to give an instance, public spaces should be intruded as little as possible by either replacing or reinstalling the camera or by using a blur zone filter, as described in the paper "GDPR Compliance in Video Surveillance and Video Processing Application" \cite{GDPRandSurveillanceCameras}, in order to make some parts of the field of view unidentifiable. \\
 		The gathering of GPS data in realtime can be critical as already stated in the subsection \ref{PrivacyMCS}. If the realtime aspect of the gathering is not of much use, the approach of Apple presented in their paper "Learning with Privacy at Scale" \cite{PrivacyApple} can be used with which the data is sent independent from when the data was generated. The data is stored on the device which created it and at an arbitrary point in time it is actually sent to the provider of the application or service that wants to use this data, therefore detaching the realtime aspect and make it somewhat impossible to trace back the point in time of when the data was produced. \\
-		For services and application where realtime is also a relevant information to be processed for example the energy and water consumption in smart homes, for example in the Schoonschipp project in Amsterdam (subsection \ref{Schoonschipp}), whose smart grid system relies on that data, the General Data Protection Regulation can be a really hard governance, because the inhabitants are "transparent human beings" as the data from the homes is publicly known. Therefore the consent part of GDPR is significant such that the inhabitant are well informed and authorize the service provider to use that data, hence making GDPR somewhat redundant and unnecessary.
+		For services and application where realtime is also a relevant information to be processed as the energy and water consumption in smart homes, for example in the Schoonschipp project in Amsterdam (subsection \ref{Schoonschipp}), whose smart grid system relies on that data, the General Data Protection Regulation can be a really hard governance, because the inhabitants are "transparent human beings" as the data from the homes is publicly known. Therefore the consent part of GDPR is significant such that the inhabitant are well informed and authorize the service provider to use that data, hence making GDPR somewhat redundant and unnecessary in such cases.
 	\closesection
 	
+	\hfill \\
 	\noindent The idea of GDPR is to give users back the power over their own information and data and decide when it is used. Also because the use of data has become highly technical, obscure and unpredictable the concepts of consent which are the underlying base of the privacy rights are not meaningful as tracking the data in the world wide web and other services is very difficult. Another idea emerged in 2018 in the paper "A Blueprint for a Better Digital Society" by Jaron Lanier and E. Glen Weyl of "Data Dignity":
 	
 	\section[Data Dignity]{Data Dignity \cite{LanierWeylBlueprint}}
