--- a/Report/crowd_sourcing_and_gdpr.tex
+++ b/Report/crowd_sourcing_and_gdpr.tex
@@ -321,7 +321,7 @@
 
 
 	%\chapter{Considerations in Designing Crowd-Sourcing Methods}
-	\chapter{Conclusion}
+	\chapter{Results}
 	In the following chapter the currently used crowd-sourcing methods are evaluated and possible design principles and guidelines are introduced.
 	
 	\section{Today's Crowd-Sourcing Methods and GDPR} \label{juxtaposition}
@@ -358,17 +358,27 @@
 		The idea behind "Data Dignity" is to create a coherent marketplace for people's data in which people are getting paid for the data they generate and have to pay if they want to use services that need this data. A benefit of this is that platforms will receive higher-quality data and therefore being able to create higher-quality services with which a greater revenue can be achieved. \\
 		In order to enforce data dignity Lanier and Weyl suggest the use of "Mediators of Individual Data", so called MIDs, because tech firms or individuals alone would not be able to make this kind of change as for tech giants too many conflicts of interests do exists and the complexity of the digital economy does not allow the in detail regulation. These MIDs are intermediary groups which will negotiate with service providers that need data about the value of data and the wages and data royalties of them and will perform payment duties, so the individual that generated the data gets paid acoordingly. They are representatives of a group of people, like corporations or labor and consumer unions, which will promote its own standards and qualities. MIDs can be really different from another based on the members that they represent or which interests are of the most value for them. It is also possible that for some of the MIDs not everyone is allowed to or it is really hard to join them, based on the data they are handling. However, all of the MIDs should in some way implement the following eight principles:
 		\begin{enumerate}[(i)]
-			\item Fiduciary Duty
-			\item Quality Standards
-			\item Inalienable Provenance
-			\item Benefit Sharing
-			\item Competence and Professionalism
-			\item Biological Realism
-			\item Cognitive Realism
-			\item Longevity
+			\item \textit{Fiduciary Duty} \\
+			An MID should be a trustee for individuals that create data. The data from the user's should therefore be measured in a legal, economic, and structural sense.
+			\item \textit{Quality Standards} \\
+			Each MID can individually define quality standards, enforce and foster them in regards to decency, accountability, and acknowledged achievements.
+			\item \textit{Inalienable Provenance} \\
+			An MID should handle the buy- and sell-procedure of data to service provider, but should also ensure that the data is only used for the specific processes and not be either permanently sold or the use is alienated beyond recognition.
+			\item \textit{Benefit Sharing} \\
+			Each MID should ensure that most of the benefit (approximately 70\%) is given back to the creators. This may need a regulatory layer in the whole system in order to guarantee this.
+			\item \textit{Competence and Professionalism} \\
+			An MID should have an expertized management such that it can be entrusted by the data creators to competently and in a position of parity negotiate with data customers and service providers.
+			\item \textit{Biological Realism} \\
+			A user should not be compensated based on quantitative, ideal measures but on the needs of the user which can change with age and time. An MID should encourage its data creators to build up a "portfolio" of data royalties over their life time in order to gain some revenue after retirement.
+			\item \textit{Cognitive Realism} \\
+			An MID should be easy to understand and not come with long terms and conditions or complex consent giving processes, like it is the case in today's world.
+			\item \textit{Longevity} \\
+			An MID should not be a short-lived venture, but a long-lasting, intergenerational intermediary for wisdom and data. Also MIDs should create a relationships among themselves, like MIDs for nurses with MIDs for biological scientists, in order to create a network of exchange and research.
 		\end{enumerate}
 		This idea is much more systemic and future oriented than the introduction of privacy regulations in respect to not being able to prevent even more innovative privacy regulations by directly involving individuals in this topic so they realize the benefits of reasonable limitations on what efforts are demanded of them, fair compensation for what information they reveal about themselves among other abilities. Weyl and Lanier abstractly call this "the right to be left alone".
 	\closesection
+	
+	\chapter{Conclusion}
 	
 	\newpage
 	\addcontentsline{toc}{chapter}{Bibliography}
